# practicum-backend

./: .gitignore  main.py  nginx.conf  practicum.service  practicum.socket  pyproject.toml
config/: settings.py  urls.py
media/files/submits/: CU20240119_CSL9430C_Single_wfr_BI_TEST_plan.xlsx
users/: admin.py  apps.py  client.py  manager.py  models.py  serializers.py  urls.py
users/management/commands/: pull_images.py
users/migrations/: 0001_initial.py  0002_alter_area_options_area_created_area_updated_and_more.py  0003_alter_attendance_options_alter_submit_options_and_more.py  0004_alter_area_coord1_alter_area_coord2_and_more.py  0005_user_role_alter_attendance_status_and_more.py  0006_group_schedule.py  0007_task_group.py  0008_alter_user_group.py  0009_alter_user_group_alter_user_image.py  0010_rename_course_user_level.py  0011_group_teacher.py  0012_alter_group_teacher.py  0013_alter_group_name_alter_group_teacher_and_more.py  0014_attendancegroup.py  0015_alter_schedule_weekday.py  0016_attendance_latitude_attendance_longitude_user_photo_and_more.py
users/views/: admin.py  auth.py  student.py
